--- a/docs/manual/analyse.tex
+++ b/docs/manual/analyse.tex
@@ -1,7 +1,7 @@
 %
 % This file is part of the GROMACS molecular simulation package.
 %
-% Copyright (c) 2013,2014,2015,2016,2017, by the GROMACS development team, led by
+% Copyright (c) 2013,2014,2015,2016,2017,2018, by the GROMACS development team, led by
 % Mark Abraham, David van der Spoel, Berk Hess, and Erik Lindahl,
 % and including many others, as listed in the AUTHORS file in the
 % top-level source directory and at http://www.gromacs.org.
@@ -1154,6 +1154,29 @@ The program {\tt \normindex{gmx density}} calculates the mass density of
 groups and gives a plot of the density against a box
 axis. This is useful for looking at the distribution of groups or
 atoms across the interface.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Functional Mode Analysis
+
+\section{Functional Mode Analysis}
+\label{sec:FMA}\index{FMA}\index{Functional Mode Analysis}
+
+Functional Mode Analysis (FMA) \cite{HubdeGroot2009,KrivobokovaEtAl2012} is a 
+method aimed at finding collective modes that best correlate with an observable 
+$f$ which is assumed to depend on the structure $\mathbf{x}$ of the system 
+under consideration. In mathematical terms, FMA tries to minimize the 
+residuals $\mathbf{\epsilon}$ in the regression problem
+
+\begin{equation}
+ \label{eqn:fma}
+\mathbf{f} = \mathbf{X}\mathbf{\beta} + \epsilon
+\end{equation}
+
+where $\mathbf{f}$ is the vector containing the functional values, 
+$\mathbf{X}$ is the Cartesian coordinate matrix containing the corresponding 
+structures and $\mathbf{\beta}$ is a one-dimensional set of coefficients, that 
+represents a collective mode of fluctuation that best captures the 
+fluctuations in f.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chemical shifts
 
