Intermediate commit to track changes to manual
This is just an intermediate commit to make sure git properly tracks the
changes to the files for the manual, and is not expected to compile
the manual at all.

This change does the conversion from tex to rst, while keeping the file
names.

Change-Id: I3986740ab42a4054c4d0f9f67923ebf7a51320d9

--- a/docs/manual/README
+++ b/docs/manual/README
@@ -2,7 +2,8 @@ So, you want to build the manual? This is now easy.
 
 1. Configure the main GROMACS repo with GMX_BUILD_MANUAL=on
 2. cmake will run some detection about whether this is possible
-3. Later, use "make manual," which will build GROMACS in the
+3. This means that you need sphinx to create the most up to date version
+4. Later, use "make manual," which will build GROMACS in the
    usual way, and use the generated binaries to build the manual.
 
 An installation of pdflatex and ImageMagick is assumed by the
