Permit define .mdp field to assign values
It is intended that the "define" .mdp field can set preprocessor
variables to values, but this got broken in some clean up. Added a
test to cover it.

Fixes #2392

Change-Id: I16a3705a0d59a912a8eb7bfad0b472f12d2dc377

--- a/docs/release-notes/2018/2018.1.rst
+++ b/docs/release-notes/2018/2018.1.rst
@@ -26,6 +26,13 @@ system.
 
 :issue:`2381`
 
+Fixed handling of mdp ``define`` statement assigning preprocessor values
+-------------------------------------------------------------------------
+Now .mdp files can configure the topology with values, as originally
+intended, e.g. ``"define = -DBOOL -DVAR=VALUE"``.
+
+:issue:`2392`
+
 Added check in grompp to avoid assertion failure
 --------------------------------------------------------------------------
 With an mdp file with a parameter present with both the current name
