Detect AMD SMT topology
On AMD Zen the cpuinfo code detected hyperthreading but put all
threads on different cores in the topology. Now the correct
topology is detected using extended APIC.

Fixes #2388

Change-Id: I194f3e09e669c20d1d62355a36be062e6cce264e

--- a/docs/release-notes/2018/2018.1.rst
+++ b/docs/release-notes/2018/2018.1.rst
@@ -101,3 +101,11 @@ Used isfinite unambiguously
 Patch provdied by Veselin Kolev to quiet some compiler warnings.
 
 :issue:`2400`
+
+Detect correct AMD Zen SMT topology
+--------------------------------------------------------------------------
+On AMD Zen, mdrun would use the correct number of hardware threads
+per core to set the affinity of thread. This would lead to incorrect
+thread affinities when not using all hardware threads on a machine.
+
+:issue:`2388`
