--- a/docs/release-notes/2018/2018.1.rst
+++ b/docs/release-notes/2018/2018.1.rst
@@ -122,6 +122,15 @@ Patch provdied by Veselin Kolev to quiet some compiler warnings.
 
 :issue:`2400`
 
+Work around gcc-6 bug in tabulated group non-bonded kernels
+--------------------------------------------------------------------------
+With the gcc-6 compiler, AVX and -O3, which is the default,
+the tabulated non-bonded kernels of the (deprecated) group
+cutoff-scheme produced incorrect energies and forces.
+The errors are so large that they could not have caused latent issues.
+
+:issue:`2424`
+
 Detect correct AMD Zen SMT topology
 """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 On recent AMD Zen processors, hardware thread detection and pinning
