Make multi-atom TPI reproducible
Test particle insertion of molecules of more than one atom called
a rotate function with multiple random calls in the arguments. This
lead to non-reproducible results, at least when switching compiler,
since the language does not define the argument evaluation order.
Note that this issue did not affect physical correctness.

Change-Id: I9ab07566878f381f11284d813d9077fa90e68866

--- a/docs/release-notes/2018/2018.1.rst
+++ b/docs/release-notes/2018/2018.1.rst
@@ -145,3 +145,9 @@ each simulation was running on a single MPI rank. When a simulation
 itself used multiple MPI ranks, the run would stop with an MPI error.
 
 :issue:`2433`
+
+Miscellaneous
+^^^^^^^^^^^^^
+
+Made multi-atom TPI reproducible with different compilers
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
