Fix pull bug with geometry=direction-periodic
When doing COM pulling with geometry direction-periodic,
the reference location needs to be used to compute the current
distance. This reference was taken from the previous step instead
of the current. In practice this only caused issues at restarts
when the distance was more than half the box length.

Fixes #2446

Change-Id: Ie0c0341ad8c6ce1e78951270cab27ecaf95d65eb

--- a/docs/release-notes/2018/2018.1.rst
+++ b/docs/release-notes/2018/2018.1.rst
@@ -166,6 +166,15 @@ And continuation from checkpoints could be refused.
 :issue:`2441`
 :issue:`2444`
 
+Fixed restart bug with pull geometry direction-periodic
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+With COM pulling with geometry direction-periodic, (only) at the step
+of continuing from checkpoint the closest PBC image would be used
+instead of the of the one closest to the reference value. This could
+lead to a sharp spike in the pull force at the continuation step.
+
+:issue:`2446`
+
 Miscellaneous
 ^^^^^^^^^^^^^
 
