Fix virial with external pull potential and MPI
When using an external pull potential with domain decomposition,
currently this is only used by AWH, the virial contribution would
be multiplied with the number of MPI ranks.

Fixes #2455

Change-Id: I61452fb9eca6e68fea3256cc25b39033a9c5d8e7

--- a/docs/release-notes/2018/2018.1.rst
+++ b/docs/release-notes/2018/2018.1.rst
@@ -166,6 +166,12 @@ And continuation from checkpoints could be refused.
 :issue:`2441`
 :issue:`2444`
 
+Fixed virial with AWH and domain decomposiion
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+When running AWH with domain decomposition, the AWH/pull virial
+contribution would be multiplied with the number of MPI ranks.
+
+
 Fixed restart bug with pull geometry direction-periodic
 """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 With COM pulling with geometry direction-periodic, (only) at the step
