Also issue OMP_NUM_THREADS reading note to the log
The note that was meant to inform users that OMP_NUM_THREADS was setting
the number of threads in their run (as this value can be inherited by
the env) has not been logged. It was also printed right after the tpx
reading statues making it hard to notice. Removed stderr output now
that this is no longer required.

This change makes the note easier to notice prepending a newline and
issues it to the log file too.

Refs #2472

Change-Id: I73fc9de5e9d747f9d7a094c6678ffc1547481b94

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -103,6 +103,14 @@ Fixed CUDA compilation on Windows.
 Miscellaneous
 ^^^^^^^^^^^^^
 
+Information message about OMP_NUM_THREADS now sent to log file
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+Made it easier to track this information by writing it to the log file
+in a clear way, rather than to stderr.
+
+:issue:`2472`
+
 Fixed inadvertent disabling of SIMD version of the integrator
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
