Changed histogram check interval for multidimensional AWH bias.
The step interval for performing covering checks depended explicitly
on the total number of points in the AWH histogram. The covering
checks themselves however only depends directly on the extent of each
one-dimensional axis. For a multidimensional grid in combination with
relatively few samples to cover the sampling interval (e.g. using
Brownian dynamics), this could lead to a delayed detection of the
covering.

The same step interval was also used for checking for histogram
anomalies, which however only generates warnings and is not integral
to the AWH method itself.

Now the covering check interval is instead determined from the number
of sigma, the "width" of one sample, required to cover each
dimension. Since there is about 1 point per sigma, the dependency of
the check interval on the number of points is essentially
unchanged. However, this relation is not numerically exact.
Therefore, this change also requires updating reference data for a
regression test to be updated.

The check interval for histogram anomalies is set to be the same as
for the covering, but could in the future be made less frequent.

Added release note.

Fixes #2487

Change-Id: I5af0d48436664d8fdfe8bafa05cde3cdae27e45a

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -40,6 +40,14 @@ Fixed enemat when the .edr file had no matching energy groups
 
 :issue:`2508`
 
+Fixed AWH too infrequent checks for covering
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+For multidimensional AWH grids with many points relative to the number
+of samples required for covering the grid, the detection of covering
+coule be delayed because of too infrequent checks.
+
+:issue:`2487`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
