Removed dependency on number of grid points for AWH histogram check.
The checks should not directly depend of the number of points in the
grid since AWH generally uses weight histograms exactly to avoid
effects of binning. For very large number of points in combination
with relatively few samples to cover the sampling interval (e.g. using
Brownian dynamics), this could lead to a delayed detection of the
covering.

Now the covering check interval is instead determined from the width
of the harmonic potential, i.e. the width of one "sample", relative to
the length of the sampling interval along each dimension. The check
interval for histogram anomalies is set to be the same, but could in
the future be made less frequent.

Added release note.

Fixes #2487

Change-Id: I5af0d48436664d8fdfe8bafa05cde3cdae27e45a

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -27,6 +27,14 @@ during make check/test.
 
 :issue:`2465`
 
+Fixed AWH too infrequent checks for covering
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+When the number of points in the AWH grid was large relative to the
+number of samples required for covering the grid the detection of
+covering was delayed because of too infrequent checks.
+
+:issue:`2487`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
