Enable SIMD version of update
A bug in setting mdatoms->havePartiallyFrozenAtoms caused the SIMD
version of the leap-frog update to always be deactivated.

Fixes #2497

Change-Id: I670549c95c983cac5033ea6bb71b77561e063223

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -32,3 +32,10 @@ Fixes to improve portability
 
 Miscellaneous
 ^^^^^^^^^^^^^
+
+Enable SIMD version of the integrator
+"""""""""""""""""""""""""""""""""""""
+
+Fixed a bug so the SIMD version of the integrator is chosen, when possible.
+
+:issue:`2497`
