--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -32,3 +32,10 @@ Fixes to improve portability
 
 Miscellaneous
 ^^^^^^^^^^^^^
+
+Fixed inadvertent disabling of SIMD version of the integrator
+"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+Fixed a bug so the SIMD version of the leap-frog integrator is chosen, when possible.
+
+:issue:`2497`
