Fixed enemat when .edr had no matching energy groups
Removed some debug output that obscured both the code and the useful
user-facing warnings.

Used a simpler bool construct to decide whether to issue the warning.

Fixes #2508

Change-Id: Ife56264991e365f8f5ca3b1285caea8033da7584

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -35,6 +35,11 @@ Fixed by disallowing empty boxes for solvent PDB files.
 
 :issue:`2523`
 
+Fixed enemat when the .edr file had no matching energy groups
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+:issue:`2508`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
