Remove unused results of cudaStreamQuery()
Coincidentally fixes #2509 (Windows + CUDA compilation)

Change-Id: I032c5fab53bf83cf0ea8c0299d8752b10d1f6c0e

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -30,6 +30,10 @@ during make check/test.
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+Fixed CUDA compilation on Windows.
+
+:issue:`2509`
+
 Miscellaneous
 ^^^^^^^^^^^^^
 
