--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -27,6 +27,14 @@ during make check/test.
 
 :issue:`2465`
 
+Fix infinite loop in gmx solvate
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+When provided with a PDB file that had no box information for the solvent,
+gmx solvate could be stuck in an infinite loop.
+Fixed by disallowing empty boxes for solvent PDB files.
+
+:issue:`2523`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
