--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -16,6 +16,13 @@ When using OpenCL builds and timing, a memory leak would lead to all system memo
 
 :issue:`2470`
 
+Fix moving frozen atoms with constraints
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+Frozen atoms which also had bond constraints could move.
+
+:issue:`2542`
+
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
