Remove constraint v correction for frozen atoms
The optimized update routines no longer set the velocities of frozen
dimensions to zero, but the constraint code would still correct
the velocities of frozen dimensions.

Note that the COM correction can still modify velocities of frozen
dimensions, but this is a negligible effect unless there are
systematic COM forces.

Fixes #2542

Change-Id: I4770d9bd7991a021ce173f219eb7310a91eaf10e

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -17,9 +17,16 @@ When using OpenCL builds and timing, a memory leak would lead to all system memo
 :issue:`2470`
 
 Fix MPI error after constraint failure during energy minimization
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
 :issue:`2540`
+
+Fix moving frozen atoms with constraints
+""""""""""""""""""""""""""""""""""""""""
+
+Frozen atoms which also had bond constraints could move.
+
+:issue:`2542`
 
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
