--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -52,3 +52,12 @@ Fixed inadvertent disabling of SIMD version of the integrator
 Fixed a bug so the SIMD version of the leap-frog integrator is chosen, when possible.
 
 :issue:`2497`
+
+Fix own FFTW builds on certain AVX2/AVX512 hardware
+"""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+Version 3.3.8 of FFTW fixes some known gcc-8 errors for AVX2 by removing the 
+fast-math flag, and it also appears to fix an issue with failed unit tests on
+AVX512-capable hardware, so we have bumped the version we download to 3.3.8.
+
+:issue:`2541`
