Fix MPI inconsistency in EM after constraint failure
Fixes issue #2540

Change-Id: Id18c17af82f80917388c11fc776b79bf4966a4ac

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -16,6 +16,11 @@ When using OpenCL builds and timing, a memory leak would lead to all system memo
 
 :issue:`2470`
 
+Fix MPI error after constraint failure during energy minimization
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+:issue:`2540`
+
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
