Add fatal error for inconsistent graph
In case a moleculetype consists of multiple monomers connected
by restraints, an inconsistent graph could be generated.
Now a fatal error with explanation is generated for such cases.
Also a fatal error is generated with an inconsistent graph with  long
bonds in general.

Fixes #2549

Change-Id: I6fa11fb7cefd74ed077c1fb523a2147c91e0d0fd

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -74,6 +74,16 @@ Fix crash in gmx solvate
 gmx solvate would crash due to memory corruption when using multiple solvent
 molecule types.
 
+Added check for unallowed periodic setups
+"""""""""""""""""""""""""""""""""""""""""
+
+Long distances between atoms in bonded interactions could lead to incorrect
+periodicity removal. In such cases an inconsistent shift message was printed,
+but the run or analysis was not terminated and other, confusing, errors
+could be issued. Now an informative fatal error is issued.
+
+:issue:`2549`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
