Add fatal error for inconsistent graph
In case a moleculetype consists of multiple monomers connected
by restraints, an inconsistent graph could be generated.
Now a fatal error with explanation is generated for such cases.
Also a fatal error is generated with an inconsistent graph with  long
bonds in general.

Fixes #2549

Change-Id: I6fa11fb7cefd74ed077c1fb523a2147c91e0d0fd

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -17,7 +17,7 @@ When using OpenCL builds and timing, a memory leak would lead to all system memo
 :issue:`2470`
 
 Fix MPI error after constraint failure during energy minimization
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
 :issue:`2540`
 
@@ -53,6 +53,16 @@ introducing a different output method for PQR files that follows the
 standard.
 
 :issue:`2511`
+
+Added check for unallowed periodic setups
+"""""""""""""""""""""""""""""""""""""""""
+
+Long distances between atoms in bonded interactions could lead to incorrect
+periodicity removal. In such cases an inconsistent shift message was printed,
+but the run or analysis was not terminated and other, confusing, errors
+could be issued. Now an informative fatal error is issued.
+
+:issue:`2549`
 
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
