Avoid COM removal moving frozen atoms
Fixes #2551
Refs #2542

Change-Id: Ifd7523661248594cce7329dfd86e814b78c9c32c

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -28,6 +28,14 @@ Frozen atoms which also had bond constraints could move.
 
 :issue:`2542`
 
+Fix COM removal moving frozen atoms
+"""""""""""""""""""""""""""""""""""
+
+When frozen atoms were part of center of mass motion removal groups,
+they could accumulate momentum and move.
+
+:issue:`2551`
+
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
