--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -17,11 +17,19 @@ When using OpenCL builds and timing, a memory leak would lead to all system memo
 :issue:`2470`
 
 Fix moving frozen atoms with constraints
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+""""""""""""""""""""""""""""""""""""""""
 
 Frozen atoms which also had bond constraints could move.
 
 :issue:`2542`
+
+Fix COM removal moving frozen atoms
+"""""""""""""""""""""""""""""""""""
+
+When frozen atoms were part of center of mass motion removal groups,
+they could accumulate momentum and move.
+
+:issue:`2551`
 
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
