Fix gmx solvate with multiple solvent molecule types
When using a solvent box with multipe solvent molecule types, gmx
solvate would crash due to memory corruption. Fixed by properly freeing
the temporary storage for the atom information.

Fixes #2550

Change-Id: I68ed6afcd7898eb9de0686b6efeb9ff74174c92b

--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -54,6 +54,11 @@ standard.
 
 :issue:`2511`
 
+Fix crash in gmx solvate
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+gmx solvate would crash due to memory corruption when using multiple solvent
+molecule types.
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
