--- a/docs/release-notes/2018/2018.2.rst
+++ b/docs/release-notes/2018/2018.2.rst
@@ -54,6 +54,12 @@ standard.
 
 :issue:`2511`
 
+Fix crash in gmx solvate
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+gmx solvate would crash due to memory corruption when using multiple solvent
+molecule types. This commit fixes the issue by properly freeing memory
+associated.
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
