Fix bfactor output
The fix for the PQR file output caused the files containing bfactors to
be incorrectly written in this format due to a missing check that has
been added.

Fixes #2575

Change-Id: I35c3b99fee81db689df9564c3386edd85e26cbb2

--- a/docs/release-notes/2018/2018.3.rst
+++ b/docs/release-notes/2018/2018.3.rst
@@ -12,6 +12,12 @@ Fixes where mdrun could behave incorrectly
 Fixes for ``gmx`` tools
 ^^^^^^^^^^^^^^^^^^^^^^^
 
+Fix bfactor output error caused by fix for :issue:`2511`
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+The fix for the PQR file output broke the output of bfactors from other tools.
+
+:issue:`2575`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
