Fix -skip option for gmx rms
Made sure request to skip points is honored.

Fixes #2565

Change-Id: I518d3f91861f89426020861d0382f5e689f33ba0

--- a/docs/release-notes/2018/2018.3.rst
+++ b/docs/release-notes/2018/2018.3.rst
@@ -21,6 +21,13 @@ The fix for the PQR file output broke the output of bfactors from other tools.
 
 :issue:`2575`
 
+Made sure that gmx rms can skip values
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+When requested to skip values, gmx rms would still output all values despite
+the option. Now it only outputs values that are requested to be processed.
+
+:issue:`2565`
+
 Fixes to improve portability
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
